<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".views.RegisterActivity">

    <ScrollView
        android:layout_width="300sp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_title"
                android:textAlignment="center"
                android:textSize="@dimen/title"/>

            <EditText
                android:id="@+id/register_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:autofillHints="emailAddress"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text" />

            <EditText
                android:id="@+id/register_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:autofillHints="password"
                android:hint="@string/login_passwords"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text" />

            <EditText
                android:id="@+id/register_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:autofillHints="name"
                android:hint="@string/register_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text" />

            <EditText
                android:id="@+id/register_surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:autofillHints="name"
                android:hint="@string/register_surname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text" />

            <EditText
                android:id="@+id/register_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:autofillHints="phone"
                android:hint="@string/register_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text" />

            <Button
                android:id="@+id/signup_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48sp"
                android:background="@drawable/rounded_button_background"
                android:onClick="signUp"
                android:text="@string/signup_button"
                android:textSize="@dimen/default_text" />

            <Button
                android:id="@+id/signup_to_login_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:onClick="openLogIn"
                android:textColor="@color/primary"
                android:text="@string/login_button"
                android:textSize="@dimen/default_text" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>